--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		
 	
 	<body>
-<div id="wrapper">
+<div id="wrapper" align="center">
     <div id="header">
         <img src="oak tree_logo.png" align="left" class="logo">
 		
