--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		
 	
 	<body>
-<div id="wrapper" align="center">
+<div id="wrapper">
     <div id="header">
         <img src="oak tree_logo.png" align="left" class="logo">
 		
@@ -24,7 +24,7 @@
 			</h4>
     </div>
     
-    <div id="content">
+    <div id="content" align="center">
 		<!--Unit Prices-->
 		<table id="units" style="text-align:center" width="960">
 				 <tr>
@@ -78,13 +78,16 @@
 					<td>NONE</td>
 				</tr>
 			</table>
-			<img src="storage00.jpg" align="middle" class="banner">
-			<img src="storage01.jpg" align="middle" class="banner">
-			<img src="storage02.jpg" align="middle" class="banner">
-			<img src="storage03.jpg" align="middle" class="banner">
+			
 		
     </div>
-
+    <div id="images">
+		<!--Images-->
+	   	<img src="storage00.jpg" align="middle" class="banner">
+		<img src="storage01.jpg" align="middle" class="banner">
+		<img src="storage02.jpg" align="middle" class="banner">
+		<img src="storage03.jpg" align="middle" class="banner">
+	</div>
     
     <div id="footer">
         Bayou Self Mini Storage | 7696 US HWY 61 St. Francisville, Louisiana
