--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			</h4>
     </div>
     
-    <div id="content" align="center">
+    <div id="content" align="middle">
 		<!--Unit Prices-->
-		<table id="units" style="text-align:center" width="960">
+		<table id="units" style="text-align:center" width="960" margin="auto">
 				 <tr>
 					<th>UNIT SIZE</th>
 					<th>REGULAR</th> 
