--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <div id="content" align="middle">
 		<!--Unit Prices-->
-		<table id="units" style="text-align:center" margin="auto">
+		<table id="units" style="text-align:center; margin-left:auto; margin-right:auto;">
 				 <tr>
 					<th>UNIT SIZE</th>
 					<th>REGULAR</th> 
